T03-Terraform-variables/02-Terraform-output-values/security-group.tf
resource "aws_security_group" "vpc-ssh-web" {
  name        = "EC2-ssh-web"
  description = "Allow ssh and web inbound traffic"

  ingress = [
    {
      description      = "SSH from VPC"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    }
  ]
  ingress = [
    {
      description      = "web from VPC"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    }
  ]


  egress = [
    {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
    }
  ]

  tags = {
    Name = "allow_ssh_web"
  }
}
